force-app/main/default/objects/Pricing_Structure__c/Pricing_Structure__c.object-meta.xml
<CustomObject>
    <label>LV Pricing Structure</label>
    <nameField>
        <label>Pricing Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Pricing Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>