force-app/main/default/objects/Pricing_Structure__c/fields/Estimated_At_Risk_PPPM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_At_Risk_PPPM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated At-Risk PPPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>