force-app/main/default/objects/Pricing_Structure__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>Price_Book_Entry_Variations_del</relationshipName>
    <type>Lookup</type>
</CustomField>