force-app/main/default/objects/Pricing_Structure__c/fields/Pricing_Stipulations__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Stipulations__c</fullName>
    <label>Pricing Stipulations</label>
    <type>TextArea</type>
</CustomField>