force-app/main/default/objects/Pricing_Structure__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Price_Book_Entry_Variations</relationshipName>
    <type>Lookup</type>
</CustomField>