force-app/main/default/objects/Pricing_Structure__c/fields/Up_Front_Per_Member__c.field-meta.xml
<CustomField>
    <fullName>Up_Front_Per_Member__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Up Front Per Member</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>